Enhance portfolio layout, styling, and documentation

--- a/index.html
+++ b/index.html
@@ -8,32 +8,88 @@
 </head>
 <body>
 
-  <header>
-    <h1>Ajmal</h1>
-    <p>Future Web Developer</p>
-  </header>
+  
+  <!-- Header  -->
+   <header class="header">
+    <div class="container nav">
+      <h1 class="logo">Ajmal</h1>
+      <ul class="nav-links">
+        <li><a href="#about">About</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </div>
+   </header>
 
-  <section>
-    <h2>About Me</h2>
-    <p>I am learning web development and building real projects.</p>
+   <!-- Hero -->
+    <section class="hero" id="hero">
+      <div class="container">
+        <h2>Hi, I'm <span>Ajmal</span></h2>
+        <p>A future web developer passionate about building clean and functional websites.</p>
+      <div class="buttons">
+        <a href="#projects" class="btn primary">View Projects</a>
+        <a href="#contact" class="btn outline">Contact Me</a>
+      </div>
+      </div>
+    </section>
+
+    <!-- About -->
+  <section class="section light" id="about">
+    <div class="container">
+      <h2>About Me</h2>
+      <p>
+        I'm learning web development step by step by building real projects using HTML, CSS,
+        and JavaScript. I focus on strong fundamentals and clean design.
+      </p>
+    </div>
+  </section>
+  <!-- Skills -->
+  <section class="section" id="skills">
+    <div class="container">
+      <h2>Skills</h2>
+      <div class="grid">
+        <div class="card">HTML</div>
+        <div class="card">CSS</div>
+        <div class="card">JavaScript (Learning)</div>
+      </div>
+    </div>
   </section>
 
-  <section>
-    <h2>Skills</h2>
-    <ul>
-      <li>HTML</li>
-      <li>CSS</li>
-    </ul>
+  <!-- Project -->
+  <section class="section light" id="projects">
+    <div class="container">
+      <h2>Projects</h2>
+      <div class="grid">
+        <div class="card">
+          <h3>Portfolio Website</h3>
+          <p>A clean personal portfolio built using HTML and CSS.</p>
+        </div>
+        <div class="card">
+          <h3>Landing Page</h3>
+          <p>A responsive landing page layout.</p>
+        </div>
+      </div>
+    </div>
   </section>
 
-  <section>
-    <h2>Contact</h2>
-    <a href="#">Email Me</a>
+  <!-- Contact -->
+  <section class="section" id="contact">
+    <div class="container">
+      <h2>Contact</h2>
+      <p>Want to work together or have a question?</p>
+      <a href="mailto:ajmals.dev@gmail.com" class="btn primary">Email Me</a>
+    </div>
   </section>
 
-  <footer>
-    <p>© 2025 Ajmal</p>
+  <!-- Footer -->
+  <footer class="footer">
+    <p>© 2026 Ajmal. All rights reserved.</p>
   </footer>
+
+</body>
+</html>
+
 
 </body>
 </html>
